--- a/templates/index/index.html.twig
+++ b/templates/index/index.html.twig
@@ -1,66 +1,15 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello IndexController!
-{% endblock %}
+{% block title %}Login DFSCOM{% endblock %}
 
 {% block body %}
-	<style>
-		.example-wrapper {
-			margin: 1em auto;
-			max-width: 800px;
-			width: 95%;
-			font: 18px / 1.5 sans-serif;
-		}
-		.example-wrapper code {
-			background: #F5F5F5;
-			padding: 2px 6px;
-		}
-	</style>
-
-	<div class="example-wrapper">
-		<h1>INDEX !!</h1>
-		{{ client.name }}
-		<br>
-		{{ client.email }}
-		<div class="container-fluid">
-			<div class="row justify-content-center bg-primary">
-				Hola mundo
-			</div>
-		</div>
-	</div>
-
-
-	<span
-            role="button"
-            class="material-icons text-danger delete-item"
-            data-bs-toggle="modal"
-            data-bs-target="#delete-confirm">
-        delete
-    </span>
-
-
-    <div class="modal fade" id="delete-confirm" tabindex="-1" aria-labelledby="add-order-label" aria-hidden="true">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="add-order-label">{{ 'delete_confirm'|trans({}, 'admin') }}</h5>
-                    <button
-                            type="button"
-                            class="btn-close"
-                            data-bs-dismiss="modal"
-                            aria-label="{{ 'close'|trans() }}"></button>
-                </div>
-                <div class="modal-body">
-                    <div class="mb-4">{{ 'delete_confirm.text'|trans({}, 'admin') }}</div>
-                    <a class="btn btn-danger delete-link" href="">
-                        {{ 'delete'|trans({}, 'admin') }}
-                    </a>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
-                        {{ 'close'|trans() }}
-                    </button>
-                </div>
+    <div class="container">
+        <div class="row">
+            <div class="col-6 bg-light">
+                img
+            </div>
+            <div class="col-6 bg-black bg-opacity-10">
+                form
             </div>
         </div>
     </div>
