--- a/templates/index/index.html.twig
+++ b/templates/index/index.html.twig
@@ -3,6 +3,9 @@
 {% block title %}Login DFSCOM{% endblock %}
 
 {% block body %}
+    <div class="container-fluid text-center">
+        <h3>This rules !!</h3>
+    </div>
     <div class="container">
         <div class="row">
             <div class="col-6 bg-light">
