--- a/templates/index/index.html.twig
+++ b/templates/index/index.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Login DFSCOM{% endblock %}
 
 {% block body %}
-    <div class="container-fluid text-center">
+    <div class="container-fluid text-center bg-danger">
         <h3>This rules !!</h3>
     </div>
     <div class="container">
